--- a/retrieve.html
+++ b/retrieve.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,14 +18,14 @@
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/apple-touch-icon.png"
-          sizes="180x180">
+        sizes="180x180">
     <link rel="icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32"
-          type="image/png">
+        type="image/png">
     <link rel="icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16"
-          type="image/png">
+        type="image/png">
     <link rel="manifest" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/manifest.json">
     <link rel="mask-icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/safari-pinned-tab.svg"
-          color="#712cf9">
+        color="#712cf9">
     <link rel="icon" href="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#712cf9">
 
@@ -98,44 +99,58 @@
         }
 
         .btn-orange-moon {
-            background: #fc4a1a; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #f7b733, #fc6767); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #f7b733, #fc6767); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #fc4a1a;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #f7b733, #fc6767);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #f7b733, #fc6767);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #fff;
             border: 1px solid #eee;
         }
 
         .btn-pink-moon {
-            background: #ec008c; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #fc6767, #ec008c); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #fc6767, #ec008c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #ec008c;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #fc6767, #ec008c);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #fc6767, #ec008c);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #fff;
             border: 3px solid #eee;
         }
 
         .btn-purple-moon {
-            background: #4e54c8; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #4e54c8;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #8f94fb, #4e54c8);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #fff;
             border: 1px solid #eee;
         }
 
         .btn:hover {
-            background: #fc4a1a; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #fc6767, #f7b733); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #fc6767, #f7b733); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #fc4a1a;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #fc6767, #f7b733);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #fc6767, #f7b733);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #fff;
             border: 1px solid #eee;
             transition: 0.7s;
         }
 
         .toast-info {
-            background: #fc4a1a; /* fallback for old browsers */
+            background: #fc4a1a;
+            /* fallback for old browsers */
         }
 
         .toast-success {
-            background: #4e54c8; /* fallback for old browsers */
+            background: #4e54c8;
+            /* fallback for old browsers */
         }
 
         .float {
@@ -144,9 +159,12 @@
             height: 60px;
             bottom: 40px;
             right: 40px;
-            background: #4e54c8; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #4e54c8, #8f94fb); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #4e54c8, #8f94fb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #4e54c8;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #4e54c8, #8f94fb);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #4e54c8, #8f94fb);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #fff;
             color: #FFF;
             border-radius: 50px;
@@ -159,108 +177,118 @@
         }
 
         .float:hover {
-            background: #4e54c8; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #4e54c8;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #8f94fb, #4e54c8);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             color: #fff;
         }
     </style>
 
 
 </head>
+
 <body class="text-center">
 
-<main class="form-signin w-100 m-auto">
-    <img class="mb-4" src="logo.png" alt="" width="60%"
-         height="60%">
-    <h1 class="h3 mb-3 fw-normal">Orbit Company</h1>
-    <div class="card mb-3">
-        <div class="card-header">
-            Registered Users
-        </div>
-        <div class="card-body">
-            <div class="table-responsive">
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Phone</th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <!--@foreach($tasks_list as $task)-->
-                    <?php foreach($cursor as $record){ ?>
-                    <tr>
-                        <th><?php echo $record["id"]; ?></th>
-                        <td><?php echo $record["name"]; ?></td>
-                        <td><?php echo $record["phone"]; ?></td>
-                        <td>
-                            <a href='delete.php?id=<?php echo $record["id"]?>' class="btn btn-pink-moon">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    <?php } ?>
-                    <!--@endforeach-->
-                    </tbody>
-                </table>
+    <main class="form-signin w-100 m-auto">
+        <img class="mb-4" src="logo.png" alt="" width="60%" height="60%">
+        <h1 class="h3 mb-3 fw-normal">Orbit Company</h1>
+        <div class="card mb-3">
+            <div class="card-header">
+                Registered Users
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Phone</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!--@foreach($tasks_list as $task)-->
+                            <?php foreach($cursor as $record){ ?>
+                            <tr>
+                                <th>
+                                    <?php echo $record["id"]; ?>
+                                </th>
+                                <td>
+                                    <?php echo $record["name"]; ?>
+                                </td>
+                                <td>
+                                    <?php echo $record["phone"]; ?>
+                                </td>
+                                <td>
+                                    <a href='delete.php?id=<?php echo $record["id"]?>' class="btn btn-pink-moon">
+                                        <i class="fa fa-trash" aria-hidden="true"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            <?php } ?>
+                            <!--@endforeach-->
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </div>
-    <a href="index.php" class="float">
-        <i class="fa fa-solid fa-user-plus my-float"></i>
-    </a>
-</main>
+        <a href="index.php" class="float">
+            <i class="fa fa-solid fa-user-plus my-float"></i>
+        </a>
+    </main>
 
 
-<!--jquery-->
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"
+    <!--jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-<!--Toaster-->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <!--Toaster-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
-<script>
-    var message = '<?php echo $_SESSION["message"] ?>';
+    <script>
+        var message = '<?php echo $_SESSION["message"] ?>';
 
-    switch (message) {
-        case 'empty_inputs':
-            toastr.warning("Please enter required fields!");
-            break;
+        switch (message) {
+            case 'empty_inputs':
+                toastr.warning("Please enter required fields!");
+                break;
 
-        case 'welcome':
-            toastr.info("Hello... Welcome to Orbit");
-            break;
+            case 'welcome':
+                toastr.info("Hello... Welcome to Orbit");
+                break;
 
-        case 'insert_success':
-            toastr.success("New user added successfully");
-            break;
+            case 'insert_success':
+                toastr.success("New user added successfully");
+                break;
 
-        case 'insert_error':
-            toastr.error("Something went wrong!");
-            break;
-        case 'delete_success':
-            toastr.error("Record deleted successfully");
-            break;
-        case 'connection_failed':
-            toastr.error("Database connection failed!");
-            break;
-        case 'update_success':
-            toastr.success("User details update success!");
-            break;
-        default:
-        //toastr.success(message);
-    }
-</script>
-<script>
-    $(function () {
-        $("table tr").click(function () {
-            if (this.cells[0].innerHTML >= 0) {
-                window.location.replace("http://localhost/orbit_mongo/index.php?id=" + this.cells[0].innerHTML);
-            }
+            case 'insert_error':
+                toastr.error("Something went wrong!");
+                break;
+            case 'delete_success':
+                toastr.error("Record deleted successfully");
+                break;
+            case 'connection_failed':
+                toastr.error("Database connection failed!");
+                break;
+            case 'update_success':
+                toastr.success("User details update success!");
+                break;
+            default:
+            //toastr.success(message);
+        }
+    </script>
+    <script>
+        $(function () {
+            $("table tr").click(function () {
+                if (this.cells[0].innerHTML >= 0) {
+                    window.location.replace("http://localhost/orbit_mongo/index.php?id=" + this.cells[0].innerHTML);
+                }
+            });
         });
-    });
-</script>
+    </script>
 </body>
+
 </html>
